<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/rl_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_menu"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="@dimen/screen_title_size"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="@android:color/white"
            android:textColor="@color/title_color"></TextView>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            
            <Button
                android:id="@+id/btn_config"
                android:layout_height="wrap_content"
                android:text="@string/configuration" 
                android:layout_width="match_parent"></Button>
           	<Button
            	android:id="@+id/btn_play"
            	android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play"></Button>
            <Button
            	android:id="@+id/btn_monitoring"
            	android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monitoring"></Button>
            <Button
                android:id="@+id/btn_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/messages"></Button>
           	<Button
            	android:id="@+id/btn_help"
            	android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"></Button>
            <Button
            	android:id="@+id/btn_exit"
            	android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"></Button>
        </LinearLayout>        	
    </ScrollView>
</LinearLayout>