<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_config"
            android:layout_height="wrap_content"
            android:text="@string/configuration"
            android:textSize="@dimen/screen_title_size"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="@android:color/white"
            android:textColor="@color/title_color"></TextView>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_config"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/edit_name"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:inputType="textPersonName"></EditText>
            <TextView
                android:id="@+id/txt_DOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <LinearLayout
                android:id="@+id/ll_DOB"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Button
                    android:id="@+id/btn_DOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_dob"></Button>
                <TextView
                	android:id="@+id/txt_DOB_Info"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textSize="@dimen/help_text_size"
                    android:textStyle="bold"
                    android:gravity="center"></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"></Spinner>
            <TextView
                android:id="@+id/txt_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/edit_weight"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:inputType="numberDecimal"></EditText>
            <TextView
                android:id="@+id/txt_tall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tall"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold"></TextView>
            <EditText
                android:id="@+id/edit_tall"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:inputType="numberDecimal"></EditText>
        	<LinearLayout
        		android:id="@+id/ll_ok_cancel"
            	android:orientation="horizontal"
            	android:layout_height="wrap_content"
            	android:layout_width="fill_parent">
           	 	<Button
            		android:id="@+id/btn_ok"
            		android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/ok"></Button>
            	<Button
            		android:id="@+id/btn_cancel"
            		android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/cancel"></Button>
			</LinearLayout>
        </LinearLayout>        	
    </ScrollView>
</LinearLayout>