<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/rl_monitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_monitoring"
            android:layout_height="wrap_content"
            android:text="@string/monitoring"
            android:textSize="@dimen/screen_title_size"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="@android:color/white"
            android:textColor="@color/title_color"></TextView>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll_monitoring"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            
            <LinearLayout
                android:id="@+id/ll_edit_weight"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
                <Button
                	android:id="@+id/btn_edit_weight"
                	android:layout_height="wrap_content"
                	android:text="@string/edit_weight" 
                	android:layout_width="wrap_content"></Button>
                <TextView
                	android:id="@+id/txt_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/help_text_size"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="Peso sin especificar" ></TextView>
            </LinearLayout>
            
           	<Button
            	android:id="@+id/btn_weight_evolution"
            	android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_evolution"></Button>
            <Button
            	android:id="@+id/btn_bmi_evolution"
            	android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi_evolution"></Button>
            <Button
                android:id="@+id/btn_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_evolution"></Button>
        </LinearLayout>        	
    </ScrollView>
</LinearLayout>